Fixed some issues
Added in directories for assets, and modified code in the index file to be associated with our style.css. Also converted old picture to base64 for more anonymous help.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>EliteLeaks</title>
-		<body background="http://cdn.mysitemyway.com/etc-mysitemyway/backgrounds/legacy-previews/backgrounds/starfield/starfield-002516-tea-green.jpg" align="middle"></body>
-		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="http://fonts.googlepis.com/css?family=Open+Sans">
+		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 <body>
 	<nav class="nav-main">
@@ -18,22 +17,22 @@
 					<div class="nav-content">
 						<div class="nav-sub">
 							<ul>
-								<li><a href="#">More about us</a></li>
-								<li><a href="#">Started in 2016</a>/<li>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">What's New</a>/<li>
 								<li><a href="#">Working hard to bring the best leaks</a></li>
 							</ul>
 						</div>
 					</div>
 				</li>	
 				<li>
-					<input type="radio" name="nav-group" id="Dox" class="nav-option">
-					<label for="Dox" class="nav-item">Dox</label>
+					<input type="radio" name="nav-group" id="About" class="nav-option">
+					<label for="About" class="nav-item">About</label>
 					<label for="nav-close" class="nav-close"></label>	
 						<div class="nav-content">
 						<div class="nav-sub">
 							<ul>
-								<li><a href="#">Top Best Dox's</a></li>
-								<li><a href="#">Newest Dox's</a></li>
+								<li><a href="#">About us</a></li>
+								<li><a href="#"></a></li>
 								<li><a href="#">What is Doxxing?</a></li>
 							</ul>
 						</div>
@@ -60,7 +59,13 @@
 
 <input type="radio" name="nav-group" id="nav-close" class="nav-close-option">
 
-		<p> Testing the click button......works <a href="#">Click me</a>
+		<p> <font color="red"Testing the click button......works</font> <a href="#">Click me</a>
 
+
+<div id="outer">
+<div id="wrapper">
+Welcome To EliteLeaks!
+
+	
 	</body>
 </html>
