--- a/index.html
+++ b/index.html
@@ -9,64 +9,16 @@
 	</head>
 <body>
 	<nav class="nav-main">
-		<div class="logo">EliteLeaks</div>
-			<ul>
-				<li>
-					<input type="radio" name="nav-group" id="Home" class="nav-option">
-					<label for="Home" class="nav-item">Home</label>
-					<label for="nav-close" class="nav-close"></label>	
-					<div class="nav-content">
-						<div class="nav-sub">
-							<ul>
-								<li><a href="#">Home</a></li>
-								<li><a href="#">What's New</a>/<li>
-								<li><a href="#">Working hard to bring the best leaks</a></li>
-							</ul>
-						</div>
-					</div>
-				</li>	
-				<li>
-					<input type="radio" name="nav-group" id="About" class="nav-option">
-					<label for="About" class="nav-item">About</label>
-					<label for="nav-close" class="nav-close"></label>
-						<div class="nav-content">
-						<div class="nav-sub">
-							<ul>
-								<li><a href="#">About us</a></li>
-								<li><a href="#"></a></li>
-								<li><a href="#">What is Doxxing?</a></li>
-							</ul>
-						</div>
-					</div>
-				</li>
-				<li>
-					<input type="radio" name="nav-group" id="Leaks" class="nav-option">
-					<label for="Leaks" class="nav-item">Leaks</label>
-					<label for="nav-close" class="nav-close"></label>	
-						<div class="nav-content">
-						<div class="nav-sub">
-							<ul>
-								<li><a href="#">Top Leaks</a></li>
-								<li><a href="#">Biggest Leaks</a></li>
-								<li><a href="#">oldests Leaks</a></li>
-							</ul>
-						</div>
-					</div>
-				</li>
-			</div>
-		</li>
-	</ul>
-</nav>
+		<center><div class="logo">EliteLeaks</div></center>
+	</nav>
 
-<input type="radio" name="nav-group" id="nav-close" class="nav-close-option">
+	<input type="radio" name="nav-group" id="nav-close" class="nav-close-option">
 
-		<p> <font color="red"Testing the click button......works</font> <a href="#">Click me</a>
+	<p>
+		<font color="red">Testing the click button......works</font><a href="#">Click me</a><br />
+		<textarea cols="50" rows="20" ></textarea>
+	</p>
 
-
-<div id="outer">
-<div id="wrapper">
-Welcome To EliteLeaks!
-
-	
-	</body>
+<script src="assets/js/main.js"></script>
+</body>
 </html>
