--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<meta charset="utf-8">
 		<title>EliteLeaks</title>
 		<link rel="stylesheet" href="assets/css/hamburgers.min.css">
+		<!-- Check out http://materializecss.com/ for more information and help on Materialize CSS -->
+		<link rel="stylesheet" href="assets/css/materialize.min.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 <body>
 	<nav class="nav-main">
-		<button class="hamburger" type="button">
+		<button class="hamburger hamburger--elastic" type="button">
 			<span class="hamburger-box">
 				<span class="hamburger-inner"></span>
 			</span>
@@ -26,6 +28,7 @@
 	</p>
 
 <script src="assets/js/jquery-2.2.3.min.js"></script>
+<script src="assets/js/materialize.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
