fixed main textarea

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
 	<input type="radio" name="nav-group" id="nav-close" class="nav-close-option">
 
-	<p>
-		<font color="red">Testing the click button......works</font><a href="#">Click me</a><br />
-		<textarea cols="50" rows="20" ></textarea>
-	</p>
+	<div class="container">
+		<p>
+			<font color="red">Testing the click button......works</font><a href="#">Click me</a><br />
+			<textarea cols="50" rows="20" class="materialize-textarea" style="color: #fff;"></textarea>
+		</p>
+	</div>
 
 <script src="assets/js/jquery-2.2.3.min.js"></script>
 <script src="assets/js/materialize.min.js"></script>
